# mmu-vpn

./: .SRCINFO  .gitignore  PKGBUILD  README.md  build-dist.sh  install.sh
.github/workflows/: build-aur.yml  build-deb.yml  build-macos.yml  build-rpm.yml  build.yml  publish-aur.yml
.github/workflows/files/: control  mmu-vpn.spec
daemon/: Cargo.toml  build.rs  mmuvpn.desktop  mmuvpn.service
daemon/launchd/: cc.kowx712.mmuvpn.plist
daemon/macos/: Info.plist
daemon/polkit/: 50-openfortivpn.rules  cc.kowx712.fortivpn.policy
daemon/src/: main.rs  service.rs  tray.rs  util.rs  vpn.rs
daemon/src/platform/: common.rs  linux.rs  macos.rs  mod.rs
daemon/src/service/: linux.rs  macos.rs  mod.rs
daemon/src/tray/: mod.rs  notification.rs
daemon/src/vpn/: connection.rs  mod.rs  platform_impl.rs
daemon/templates/: askpass.sh  launchd.plist  systemd.service
