[package]
name = "mmuvpn"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
tray-icon = "0.19"
muda = "0.15"
tao = "0.30"
resvg = "0.47"
tiny-skia = "0.12"
usvg = "0.47"
dark-light = "2"
notify-rust = "4.18"
which = "8.0.5"
nix = { version = "0.31.3", features = ["signal", "process"] }
sysinfo = "0.36.1"
open = "5.4.0"

[profile.release]
strip = true
lto = true
